# SQLCraft

./: Dockerfile  README.md  SPACES_README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  reward_computer.py  test_integration.py  uv_error.txt
data/: northwind.db
data/ground_truth/: task1.json  task2.json  task3.json
graders/: sql_executor.py  table_checker.py
server/: __init__.py  app.py
tests/: test_graders.py
